added box shadow

--- a/css/style.css
+++ b/css/style.css
@@ -116,3 +116,7 @@ body {
 .modals img {
   vertical-align: middle !important;
 }
+
+.ui.raised.segment {
+  box-shadow: 0 0 0 1px rgba(39,41,43,.15),4px 4px 4px 0 rgba(0,0,0,.15) !important;
+}
