--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,11 @@ body {
   width: 200px;
 }
 
+#logo:hover {
+  cursor: pointer;
+  cursor: hand;
+}
+
 .ctitle {
   font-size: 30px;
   font-weight: 400;
@@ -118,5 +123,10 @@ body {
 }
 
 .ui.raised.segment, .shadowed {
-  box-shadow: 0 0 0 1px rgba(39,41,43,.15),4px 4px 4px 0 rgba(0,0,0,.15) !important;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23) !important;
+  transition: all .1s ease-in-out;
+}
+
+.projects .raised.segment:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22) !important;
 }
