--- a/public/styles/root-styles.css
+++ b/public/styles/root-styles.css
@@ -7,15 +7,68 @@ body {
   padding: 0;
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: var(--surface-color);
 
   --header-font: ElliScript, Apple Symbols, BlinkMacSystemFont,
       "Google Sans", "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   --main-font: "Google Sans", Apple Symbols, BlinkMacSystemFont,
       "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 
-  --IntlOrange: #C0362C;
+  --primary-color-h: 0;
+  --primary-color-s: 0%;
+  --primary-color-l: 0%;
+  --primary-color: hsl(var(--primary-color-h), var(--primary-color-s), var(--primary-color-l));
+
+  --secondary-color-h: 4;
+  --secondary-color-s: 63%;
+  --secondary-color-l: 46%;
+  --secondary-color: hsl(var(--secondary-color-h), var(--secondary-color-s), var(--secondary-color-l));
+
+  --primary-color-h: 0;
+  --primary-color-s: 0%;
+  --primary-color-l: 0%;
+  --primary-color: hsl(var(--primary-color-h), var(--primary-color-s), var(--primary-color-l));
+
+  --on-primary-color-h: 0;
+  --on-primary-color-s: 0%;
+  --on-primary-color-l: 100%;
+  --on-primary-color: hsl(var(--on-primary-color-h), var(--on-primary-color-s), var(--on-primary-color-l));
+
+  --surface-color-h: 0;
+  --surface-color-s: 0%;
+  --surface-color-l: 100%;
+  --surface-color: hsl(var(--surface-color-h), var(--surface-color-s), var(--surface-color-l));
+
+  --on-surface-color-h: 0;
+  --on-surface-color-s: 0%;
+  --on-surface-color-l: 0%;
+  --on-surface-color: hsl(var(--on-surface-color-h), var(--on-surface-color-s), var(--on-surface-color-l));
 }
 
 .elliscript {
   font-family: var(--header-font);
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    --primary-color-h: 0;
+    --primary-color-s: 0%;
+    --primary-color-l: 0%;
+
+    --secondary-color-h: 1;
+    --secondary-color-s: 62%;
+    --secondary-color-l: 78%;
+
+    --surface-color-h: 0;
+    --surface-color-s: 0%;
+    --surface-color-l: 15%;
+
+    --on-primary-color-h: 0;
+    --on-primary-color-s: 0%;
+    --on-primary-color-l: 100%;
+
+    --on-surface-color-h: 0;
+    --on-surface-color-s: 0%;
+    --on-surface-color-l: 100%;
+  }
 }
