--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,16 +6,18 @@ const {backHref} = Astro.props;
   #header {
     font-family: var(--header-font);
     font-size: 48px;
-    position: relative;
-    background-color: black;
+    position: fixed;
+    inset-inline-start: 0;
+    inset-inline-end: 0;
+    z-index: 1;
+    background-color: var(--primary-color);
     padding: 14px 0 14px 0;
     text-align: center;
     display: block;
-    margin-bottom: 14px;
   }
 
   a {
-    color: white;
+    color: var(--on-primary-color);
     text-decoration: none;
   }
 
@@ -29,7 +31,7 @@ const {backHref} = Astro.props;
     margin-left: 24px;
   }
 </style>
-<div id="header">
+<header id="header">
   {backHref ? <a id="backButton" href={backHref}>&lt;</a> : null}
   <a id="name" class="elliscript" href="/"><slot/></a>
-</div>
+</header>
