--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -6,7 +6,9 @@ const metaTitle = 'Elliott Marquez - Blog';
 const metaDescription = `Directory of Elliott's blog`;
 const metaImage = '/assets/img/avatar-square.jpg';
 
-const posts = [{title: 'Hello World', url: './blog/001'}];
+const posts = [
+  {title: 'Hello World', url: './001'}
+];
 ---
 
 <Shell content={metaTitle, metaDescription, metaImage}>
