update to latest version of astro

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -75,8 +75,8 @@ const {view} = Astro.props;
     </a>
   </span>
   <span id="social-wrapper">
-    <a href="https://twitter.com/techytacos">
-      <svg alt="Twitter" fill="var(--twitter-logo-color, black)" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+    <a aria-label="Twitter Profile" href="https://twitter.com/techytacos">
+      <svg alt="Twitter Logo" fill="var(--twitter-logo-color, black)" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
           viewBox="75 75 250 250" xml:space="preserve" style="enable-background:new 75 75 250 250;">
         <g>
           <path class="st1" d="M153.6,301.6c94.3,0,145.9-78.2,145.9-145.9c0-2.2,0-4.4-0.1-6.6c10-7.2,18.7-16.3,25.6-26.6
@@ -88,8 +88,8 @@ const {view} = Astro.props;
         </g>
       </svg>
     </a>
-    <a href="https://github.com/e111077">
-      <svg alt="Github" fill="var(--github-logo-color, black)" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+    <a aria-label="Github Profile" href="https://github.com/e111077">
+      <svg alt="Github Logo" fill="var(--github-logo-color, black)" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 438.549 438.549" style="enable-background:new 0 0 438.549 438.549;"
 	 xml:space="preserve">
         <g>
