--- a/src/layouts/Shell.astro
+++ b/src/layouts/Shell.astro
@@ -1,6 +1,6 @@
 ---
-import Nav from '../components/Nav';
-import Header from '../components/Header';
+import Nav from '../components/Nav.astro';
+import Header from '../components/Header.astro';
 
 let {metaTitle, metaDescription, metaImage} = Astro.props.content ?? {
   metaTitle: undefined,
