--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,6 +14,8 @@ const {backHref} = Astro.props;
     padding: 14px 0 14px 0;
     text-align: center;
     display: block;
+    box-sizing: border-box;
+    min-height: var(--header-height);
   }
 
   a {
