--- a/src/layouts/Shell.astro
+++ b/src/layouts/Shell.astro
@@ -54,7 +54,7 @@ if (metaImage) {
     }
 
     #body-background {
-      top: 80px;
+      top: var(--header-height);
       position: absolute;
       inset-inline-start: 0;
       inset-inline-end: 0;
