--- a/src/layouts/Shell.astro
+++ b/src/layouts/Shell.astro
@@ -8,10 +8,11 @@ let {metaTitle, metaDescription, metaImage} = Astro.props.content ?? {
   metaImage: undefined,
 };
 
-const view = `/${Astro.request.url.pathname.split('/')[1] ?? ''}`;
+const url = new URL(Astro.request.url);
+const view = `/${url.pathname.split('/')[1] ?? ''}`;
 let backHref = '';
 if (view !== '/') {
-  backHref = '/' + Astro.request.url.pathname.split('/').slice(0, -1).join('');
+  backHref = '/' + url.pathname.split('/').slice(0, -1).join('');
 }
 const location = Astro.request.url;
 if (metaImage) {
@@ -19,7 +20,7 @@ if (metaImage) {
 }
 ---
 
-
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
